<resources>
  <string name="FACEBOOK_APP_ID" translatable="false">1083736901703671</string>
  <string name="mandril_key" translatable="false">eyJpdiI6ImVITjJZbWhyY21OMGJISjRaekpvYUE9PSIsInZhbHVlIjoiZEVzK0VMaW84Q0VjMFF4YjIyeUR3RDlDWE5kbldTWGJ5TFBaWmJkbENiST0iLCJtYWMiOiIzNDhkZTIzNTMzMzExNTE2NmZmMmZjNWM4ZGM0M2U4OCJ9</string>
  <string name="ak_login_protocol_scheme" translatable="false">ak1083736901703671</string>
  <string name="ACCOUNT_KIT_CLIENT_TOKEN" translatable="false">3a18b153d09e47f994e9b9ab8ea0b0c1</string>
  <string name="sign_in_act">Sign In</string>
  <string name="sign_up_act">Sign Up</string>
  <string name="bank_activity">Bank</string>
  <string name="one_step_more">1 Langkah lagi</string>
  <string name="all_transactions">Semua transaksi</string>
  <string name="badges">Lencana</string>
  <string name="profile_act">Profil</string>
  <string name="edit_profile">Ubah Profil</string>
  <string name="category">Kategori</string>
  <string name="category_many">Kategori</string>
  <string name="manage_account">Atur rekening</string>
  <string name="total_category">Total Kategori</string>
  <string name="has_delete">Anda telah menghapus transaksi</string>
  <string name="no_transaction">Tidak ada transaksi</string>
  <string name="no_debt">Belum ada hutang saat ini, tambahkan hutang dengan klik tombol +</string>
  <string name="username_only">USERNAME</string>
  <string name="user_id">USER ID</string>
  <string name="password_only">KATA SANDI</string>
  <string name="pin_only">PIN</string>
  <string name="password_only_small">kata sandi</string>
  <string name="old_password_hint">KATA SANDI LAMA</string>
  <string name="confirm_password_only">ULANG KATA SANDI</string>
  <string name="confirm_pin_only">ULANG PIN</string>
  <string name="email_only">E-MAIL</string>
  <string name="end_of_goal">End of Goal</string>
  <string name="birthday">TANGGAL LAHIR</string>
  <string name="spare_each">Spare Each</string>
  <string name="gender">JENIS KELAMIN</string>
  <string name="weekly">Mingguan</string>
  <string name="quarterly">Quarterly</string>
  <string name="low">Low</string>
  <string name="medium">Medium</string>
  <string name="high">High</string>
  <string name="possible_risk">Possible Risk</string>
  <string name="sign_in">LOGIN</string>
  <string name="not_registered">Belum terdaftar?</string>
  <string name="sign_up">SIGN UP</string>
  <string name="create_your_account">Create your account</string>
  <string name="merchant">Merchant</string>
  <string name="select_category">Pilih Kategori</string>
  <string name="plan">Goals</string>
  <string name="balances">Saldo</string>
  <string name="account_balances">Saldo Rekening</string>
  <string name="save">Simpan</string>
  <string name="budget_goal">TOTAL ANGGARAN</string>
  <string name="periode">PERIODE</string>
  <string name="title">JUDUL</string>
  <string name="amount">JUMLAH</string>
  <string name="list_of_account">Daftar rekening</string>
  <string name="remind_me_every">INGATKAN SETIAP TANGGAL</string>
  <string name="skip">Lewati</string>
  <string name="lorem_ipsum">Lorem ipsum dolor sit amet, cu nonumy appetere sadipscing mea, animal iudicabit quo eu, eos esse commune ea.</string>
  <string name="disclaimer"><font><u>Disclaimer</u></font></string>
  <string name="selanjutnya">Selanjutnya</string>
  <string name="enter_passcode">Masukkan Kode</string>
  <string name="clear">Hapus</string>
  <string name="done">Selesai</string>
  <string name="title_or_merchant">Judul/Toko</string>
  <string name="subject">PILIH SUBJEK</string>
  <string name="message">PESAN</string>
  <string name="link">Link</string>
  <string name="contact">Kontak</string>
  <string name="faqs">Baca FAQ</string>
  <string name="validate_code">Validasi kode</string>
  <string name="input_friend_referral">Masukkan Kode Referral temanmu</string>
  <string name="input_referral_title">Masukkan Kode Referral</string>
  <string name="home_subtitle">Selamat Anda telah terdaftar sebagai akun DompetSehat</string>
  <string name="home_subtitle2">Pilih sesuai kebutuhan Anda!</string>
  <string name="greeting_forgot">Lupa kata sandi</string>
  <string name="command_forgot">Masukkan e-mail &amp; kata sandi baru untuk akun Anda. DompetSehat akan mengirimkan e-mail aktivasi kata sandi baru</string>
  <string name="registered_email_or_phone">E-MAIL YANG TERDAFTAR</string>
  <string name="new_password_hint">KATA SANDI BARU</string>
  <string name="confirm_password_hint">ULANGI KATA SANDI</string>
  <string name="submit">Kirim</string>
  <string name="forgot_password"><font><u>Lupa kata sandi?</u></font></string>
  <string name="forgot_password_klikmami"><font><u>Lupa kata sandi klikMAMI?</u></font></string>
  <string name="daftar_sekarang">Daftar sekarang</string>
  <string name="login_tanpa_sandi">Login tanpa kata sandi</string>
  <string name="dengan_ini"><font>Dengan ini saya menyetujui</font></string>
  <string name="terms"><font><u>ketentuan penggunaan</u></font></string>
  <string name="privacy"><font><u>kebijakan privasi.</u></font></string>
  <string name="greeting_register_email">Daftar dengan e-mail</string>
  <string name="greeting">Selamat datang kembali</string>
  <string name="email_or_username">USERNAME ATAU E-MAIL</string>
  <string name="myreferral_header">MY REFERRAL</string>
  <string name="myreferral_body">Mau Dapat Duit?</string>
  <string name="myfin_footer">Pencatatan transaksi otomatis,\nmembuat budget &amp; pengingat\ntagihan bulanan</string>
  <string name="monthly">Bulanan</string>
  <string name="budget">Anggaran</string>
  <string name="tab_title_budget">Anggaran</string>
  <string name="tab_title_more">Lainnya</string>
  <string name="amount_left">sisa</string>
  <string name="date">Tanggal</string>
  <string name="home_dialog_text_learn">{dsf-help}</string>
  <string name="no_score">Tidak ada skor</string>
  <string name="view_more">Selebihnya</string>
  <string name="day_picker_description">Tanggal dalam 1 bulan</string>
  <string name="reset_password">Ganti kata sandi</string>
  <string name="give_us_feedback">Beri kami kesan Anda</string>
  <string name="delete">Hapus</string>
  <string name="hint_2_text"><font>Untuk dapat kembali mengelola keuangan dan referral secara bersamaan, klik menu <b>more</b> lalu <b>setting</b>, kemudian masuk ke menu <b>Switch mode</b> dan aktifkan <b>My Fin &amp; Referral</b></font></string>
  <string name="accumulated">Akumulasi</string>
  <string name="desc_manfaat_for_self">Mendapat 1000 point setiap Kode Referral milik Anda digunakan temanmu ketika menggunakan aplikasi DompetSehat \n\n 1 Point = Rp. 1</string>
  <string name="see_all_transaction">Lihat semua transaksi</string>
  <string name="cicilan_bulanan">Cicilan Bulanan</string>
  <string name="note">Catatan</string>
  <string name="children">Anak</string>
  <string name="klik_disini"><font><u>Klik di sini</u></font></string>
  <string name="wording_if_plan_is_blank">Finplan membantu Anda mewujudkan rencana keuangan masa depan Anda, klik tombol &quot; + &quot; di atas untuk memulai plan Anda.</string>
  <string name="regular_income">Pemasukan Rutin</string>
  <string name="all_transaction">SEMUA TRANSAKSI</string>
  <string name="transactions">Transaksi</string>
  <string name="cashflow">Arus transaksi</string>
  <string name="tab_title_transactions">Transaksi</string>
  <string name="tab_title_report">Laporan</string>
  <string name="tab_title_plan">Rencana</string>
  <string name="all_trends">All Trends</string>
  <string name="add_tag_title">Tambah Tagar Transaksi</string>
  <string name="add_category">Tambah Kategori</string>
  <string name="search_hint"><font size="16">cari nama/tag/kategori transaksi</font></string>
  <string name="refresh">Refresh</string>
  <string name="edit">Ubah</string>
  <string name="custom">Suka-suka</string>
  <string name="search_transaction">Cari transaksi</string>
  <string name="search_category">Cari kategori</string>
  <string name="edit_title">Ubah</string>
  <string name="get_from_place">Ambil dari map</string>
  <string name="show_all">Tampilkan semua</string>
  <string name="show_incomes_only">Pemasukan saja</string>
  <string name="show_expenses_only">Pengeluaran saja</string>
  <string name="dana_pensiun">Dana pensiun</string>
  <string name="dana_darurat">Dana darurat</string>
  <string name="dana_kuliah">Dana kuliah</string>
  <string name="dana_custom">Rencana lainnya</string>
  <string name="by_transaction">Berdasarkan Transaksi</string>
  <string name="by_category">Berdasarkan Kategori</string>
  <string name="this_month">Bulan ini</string>
  <string name="a_month_ago">Bulan lalu</string>
  <string name="three_months_ago">3 bulan lalu</string>
  <string name="six_months_ago">6 bulan lalu</string>
  <string name="this_year">Tahun ini</string>
  <string name="a_year_ago">Tahun lalu</string>
  <string name="sync_all_data">Sync semua data</string>
  <string name="lend">lend</string>
  <string name="borrow">borrow</string>
  <string name="description">DESKRIPSI</string>
  <string name="pick_transaction">Pilih transaksi</string>
  <string name="date_borrow">tanggal pinjam</string>
  <string name="date_payback">tanggal kembali</string>
  <string name="sync">Sinkronisasi</string>
  <string name="synchronizing">Sedang mensinkronisasi data...</string>
  <string name="sync_all_bank_account">Sync semua rekening bank</string>
  <string name="sync_every_day_at">Sync setiap hari pada jam</string>
  <string name="delete_all_data">Hapus semua data transaksi</string>
  <string name="export_all_data">Ekspor semua data</string>
  <string name="dana_pensiun_footer">Mempersiapkan masa pensiun Anda kelak sejak dini</string>
  <string name="dana_darurat_footer">Mempersiapkan dana khusus untuk memenuhi kebutuhan yang sifatnya darurat</string>
  <string name="final_registration_mami_title">Selamat!\nakun klikMAMI Anda sudah aktif.</string>
  <string name="final_registration_mami_subtitle">klikMAMI adalah situs transaksi online\nReksa Dana Manulife.</string>
  <string name="final_registration_mami_rule">Sesuai peraturan, untuk menjadi investor pasar modal Anda perlu melengkapi beberapa informasi diri. Anda dapat melanjutkan proses pengisian data di laptop atau desktop untuk tampilan yang lebih leluasa, atau tetap di aplikasi ini.</string>
  <string name="final_registration_mami_with_laptop">Selesaikan di komputer</string>
  <string name="final_registration_mami_with_laptop_step_1">Siapkan komputer dan koneksi internet Anda, lalu kunjungi www.klikmami.com, dan login dengan e-mail dan password yang sudah Anda daftarkan.</string>
  <string name="final_registration_mami_with_laptop_step_2">Lengkapi seluruh informasi yang ditanyakan, dan isi profil risiko. Jangan lupa upload foto KTP/Paspor Anda. Pastikan KTP dan Paspor Anda masih berlaku dan sama dengan yang nomornya sudah Anda daftarkan.</string>
  <string name="final_registration_mami_with_laptop_step_3">Jika mengalami kendala, hubungi Customer Service Reksa Dana Manulife di telepon (021) 2555 2255 dan 0804-1-222555 (setiap hari, 08:00-22:00 WIB), atau e-mail MAMI_customer_id@manulifeam.com.</string>
  <string name="final_registration_mami_with_gadget">Lanjutkan di aplikasi ini</string>
  <string name="login">Login</string>
  <string name="budget_estimator_title">Berikut rekomendasi \n anggaran bulanan Anda</string>
  <string name="budget_estimator_footer">Fitur ini bisa diakses melalui menu anggaran</string>
  <string name="already_have_account">Sudah memiliki akun?</string>
  <string name="back">Kembali</string>
  <string name="congrats_reset_password">Selamat kata sandi kamu berhasil diubah, buka e-mail untuk melakukan konfirmasi kata sandi yang baru, agar dapat digunakan kembali mengakses aplikasi Dompetsehat</string>
  <string name="email_receive_question">Belum terima e-mail?</string>
  <string name="resend_email"><font><u>Kirim ulang</u></font></string>
  <string name="second">detik</string>
</resources>