<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    >

  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center_horizontal"
      android:layout_marginTop="@dimen/padding_size_medium"
      android:gravity="center"
      android:textStyle="bold"
      android:textColor="@color/green_manulife"
      android:text="@string/final_registration_mami_title"
      android:textSize="@dimen/bigger_text_size"
      />

  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:layout_gravity="center_horizontal"
      android:text="@string/final_registration_mami_subtitle"
      />

  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/padding_root_layout_twice"
      android:gravity="center"
      android:text="@string/final_registration_mami_rule"
      />

  <Button
      android:id="@+id/btn_hint"
      android:text="@string/final_registration_mami_with_laptop"
      android:layout_width="match_parent"
      android:layout_height="@dimen/ds_action_bar_size"
      android:textColor="@color/green_manulife"
      android:layout_marginTop="@dimen/padding_root_layout_twice"
      android:layout_marginLeft="@dimen/padding_size_high"
      android:layout_marginRight="@dimen/padding_size_high"
      android:background="@drawable/button_manulife_template"
      android:stateListAnimator="@null"
      android:textAllCaps="false"
      />

  <Button
      android:id="@+id/btn_next"
      android:layout_width="match_parent"
      android:layout_height="@dimen/ds_action_bar_size"
      android:text="@string/final_registration_mami_with_gadget"
      android:textColor="@color/yellow_manulife"
      android:layout_marginTop="@dimen/padding_size_medium"
      android:layout_marginLeft="@dimen/padding_size_high"
      android:layout_marginRight="@dimen/padding_size_high"
      android:background="@drawable/button_manulife"
      android:stateListAnimator="@null"
      android:textAllCaps="false"
      />

</LinearLayout>