<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    >

  <include layout="@layout/simple_small_action_bar_only_back"/>

  <ViewFlipper
      android:id="@+id/viewflipper"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        >
      <LinearLayout
          android:id="@+id/rootview"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:orientation="vertical"
          android:paddingLeft="@dimen/padding_size_high"
          android:paddingRight="@dimen/padding_size_high"
          android:paddingTop="@dimen/padding_size_medium"
          >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginTop="@dimen/padding_root_layout"
            android:text="@string/greeting_forgot"
            android:visibility="gone"
            android:textSize="@dimen/huge_text_size"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginTop="@dimen/padding_size_tiny"
            android:text="@string/command_forgot"
            android:textColor="@color/grey_700"
            android:id="@+id/textView"
            />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/et_dialog_fragment_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_height"
            android:lines="1"
            android:textSize="@dimen/normal_text_size"
            app:met_floatingLabel="highlight"
            app:met_floatingLabelAlwaysShown="true"
            app:met_floatingLabelText="@string/registered_email_or_phone"
            app:met_primaryColor="?colorAccent"
            />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/et_dialog_fragment_newpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_size_medium"
            android:inputType="textPassword"
            android:lines="1"
            android:textSize="@dimen/normal_text_size"
            app:met_floatingLabel="highlight"
            app:met_floatingLabelAlwaysShown="true"
            app:met_floatingLabelText="@string/new_password_hint"
            app:met_primaryColor="?colorAccent"
            />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/et_dialog_fragment_confirmpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_size_medium"
            android:inputType="textPassword"
            android:lines="1"
            android:textSize="@dimen/normal_text_size"
            app:met_floatingLabel="highlight"
            app:met_floatingLabelAlwaysShown="true"
            app:met_floatingLabelText="@string/confirm_password_hint"
            app:met_primaryColor="?colorAccent"
            />

        <Button
            android:id="@+id/btn_reset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding_root_layout"
            android:stateListAnimator="@null"
            android:background="@drawable/button_orange_rounded"
            android:text="@string/submit"
            android:textAllCaps="false"
            android:textColor="@color/white"
            />

      </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/padding_root_layout_twice"
        >
      <ImageView
          android:id="@+id/iv_logo"
          android:layout_width="140dp"
          android:layout_height="140dp"
          android:src="@drawable/icon_success"
          android:layout_margin="@dimen/padding_root_layout"
          />

      <TextView
          android:id="@+id/textView8"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_margin="@dimen/padding_size_medium"
          android:gravity="center"
          android:lineSpacingExtra="4dp"
          android:text="@string/congrats_reset_password"
          android:textColor="@color/grey_600"
          />

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_margin="@dimen/padding_size_high"
          android:orientation="horizontal"
          >

        <TextView
            android:id="@+id/tv_counter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="15"
            android:textColor="@color/grey_600"
            android:textSize="@dimen/huger_text_size"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/padding_size_tiny"
            android:text="@string/second"
            android:textColor="@color/grey_600"
            android:textSize="@dimen/big_text_size"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_receive_question"
            android:textColor="@color/grey_600"
            />

        <TextView
            android:id="@+id/tv_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/padding_size_tiny"
            android:text="@string/resend_email"
            android:enabled="false"
            android:textColor="@color/text_state_color_green"
            />

      </LinearLayout>

    </LinearLayout>

  </ViewFlipper>


</LinearLayout>