<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
  <ScrollView
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:fillViewport="true"
      >
    <LinearLayout
        android:id="@+id/rootview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingLeft="@dimen/padding_size_high"
        android:paddingRight="@dimen/padding_size_high"
        android:paddingTop="@dimen/padding_size_medium"
        >

      <ImageView
          android:id="@+id/img_back"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:src="@drawable/ic_action_arrow_left"
          android:tint="@color/black"
          />

      <View
          android:layout_width="match_parent"
          android:layout_height="@dimen/padding_size_medium"
          />

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="left"
          android:layout_marginTop="@dimen/padding_root_layout"
          android:text="@string/greeting_register_email"
          android:textSize="@dimen/huge_text_size"
          />

      <com.rengwuxian.materialedittext.MaterialEditText
          android:id="@+id/et_email"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/space_height"
          android:singleLine="true"
          android:textSize="@dimen/normal_text_size"
          app:met_floatingLabel="highlight"
          app:met_floatingLabelAlwaysShown="true"
          app:met_floatingLabelText="@string/registered_email_or_phone"
          app:met_primaryColor="?colorAccent"
          />

      <com.rengwuxian.materialedittext.MaterialEditText
          android:id="@+id/et_password"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/padding_size_medium"
          android:inputType="textPassword"
          android:singleLine="true"
          android:textSize="@dimen/normal_text_size"
          app:met_floatingLabel="highlight"
          app:met_floatingLabelAlwaysShown="true"
          app:met_floatingLabelText="@string/new_password_hint"
          app:met_primaryColor="?colorAccent"
          />

      <com.rengwuxian.materialedittext.MaterialEditText
          android:id="@+id/et_confirm_password"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/padding_size_medium"
          android:inputType="textPassword"
          android:singleLine="true"
          android:textSize="@dimen/normal_text_size"
          app:met_floatingLabel="highlight"
          app:met_floatingLabelAlwaysShown="true"
          app:met_floatingLabelText="@string/confirm_password_hint"
          app:met_primaryColor="?colorAccent"
          />

      <Button
          android:id="@+id/btn_signUp"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_margin="@dimen/padding_root_layout"
          android:background="@drawable/button_orange_rounded"
          android:text="@string/sign_up"
          android:textAllCaps="false"
          android:textColor="@color/white"
          />

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:gravity="center"
          android:orientation="horizontal"
          >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_account"
            android:textColor="@color/grey_600"
            android:textSize="@dimen/average_text_size"
            android:id="@+id/textView4"
            />

        <TextView
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_size_tiny"
            android:text="@string/login"
            android:textColor="@color/green_dompet_ori"
            android:textSize="@dimen/average_text_size"
            android:textStyle="bold"
            />

      </LinearLayout>

    </LinearLayout>
  </ScrollView>
</RelativeLayout>