<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    >

  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center_horizontal"
      android:layout_margin="@dimen/padding_root_layout"
      android:gravity="center"
      android:text="@string/budget_estimator_title"
      android:textSize="@dimen/big_text_size"
      />

  <android.support.v7.widget.RecyclerView
      android:id="@+id/recycleview"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_weight="1"
      android:padding="@dimen/padding_size_high"
      />

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginLeft="@dimen/padding_root_layout"
      android:layout_marginRight="@dimen/padding_root_layout"
      android:orientation="horizontal"
      >

    <Button
        android:id="@+id/btn_edit"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="@dimen/padding_size_medium"
        android:layout_weight="1"
        android:background="@drawable/button_rounded_grey_outline"
        android:stateListAnimator="@null"
        android:text="@string/edit"
        android:textAllCaps="false"
        android:textColor="@color/text_button_selector_default_grey"
        />

    <Button
        android:id="@+id/btn_done"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="@dimen/padding_size_medium"
        android:layout_weight="1"
        android:stateListAnimator="@null"
        android:text="@string/done"
        android:textAllCaps="false"
        android:textColor="@color/text_button_selector_default_white"
        android:background="@drawable/button_green_dompet"
        />

  </LinearLayout>

  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/padding_size_high"
      android:gravity="center"
      android:text="@string/budget_estimator_footer"
      android:textSize="@dimen/average_text_size"
      />

</LinearLayout>