<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="@dimen/padding_size_high"
    >

  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center_horizontal"
      android:padding="@dimen/padding_size_high"
      android:text="@string/input_referral_title"
      android:textSize="@dimen/huge_text_size"
      />

  <com.rengwuxian.materialedittext.MaterialEditText
      android:id="@+id/et_field"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginLeft="@dimen/padding_size_high"
      android:layout_marginRight="@dimen/padding_size_high"
      android:layout_marginTop="@dimen/padding_root_layout_twice"
      android:gravity="center"
      android:hint="@string/input_friend_referral"
      android:singleLine="true"
      android:textSize="@dimen/normal_text_size"
      app:met_floatingLabel="highlight"
      app:met_floatingLabelText="Masukkan kode referal temanmu"
      app:met_primaryColor="?colorAccent"
      />

  <Button
      android:id="@+id/btn_next"
      android:layout_width="match_parent"
      android:layout_height="44dp"
      android:layout_margin="@dimen/padding_root_layout"
      android:background="@drawable/button_rounded_orange_send_stroked"
      android:enabled="false"
      android:text="@string/validate_code"
      android:textAllCaps="false"
      android:stateListAnimator="@null"
      android:textColor="@color/text_button_selector_orange"
      />

  <LinearLayout
      android:id="@+id/ll_skip"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center_horizontal"
      android:gravity="center"
      android:orientation="horizontal"
      android:padding="@dimen/padding_size_small"
      >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/skip"
        />

    <com.mikepenz.iconics.view.IconicsTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/padding_size_small"
        android:rotation="180"
        android:text="{dsf-arrow-back}"
        android:textSize="@dimen/bigger_text_size"
        />

  </LinearLayout>

</LinearLayout>